cmake_minimum_required(VERSION 3.10)
project(path_cpp_pluralsight)

set(CMAKE_CXX_STANDARD 14)

add_executable(path_cpp_pluralsight main.cpp functions.cpp functions.h Account.cpp Account.h Transaction.cpp Transaction.h Tweeter.cpp Tweeter.h Person.cpp Person.h Status.cpp Status.h structs.cpp structs.h ClassesAndObjects.cpp ClassesAndObjects.h Templates.cpp Templates.h Accum.cpp Accum.h Resource.cpp Resource.h Features1417.cpp Features1417.h)